force-app/main/default/objects/RC_student__c/fields/branch_type__c.field-meta.xml
<CustomField>
    <fullName>branch_type__c</fullName>
    <label>branch_type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>