force-app/main/default/objects/RC_student__c/fields/degree_cgpa__c.field-meta.xml
<CustomField>
    <fullName>degree_cgpa__c</fullName>
    <label>Degree_CGPA</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>