force-app/main/default/objects/RC_student__c/fields/degree_pass_year__c.field-meta.xml
<CustomField>
    <fullName>degree_pass_year__c</fullName>
    <label>Degree Pass Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>