force-app/main/default/objects/RC_student__c/fields/degree_pursuing__c.field-meta.xml
<CustomField>
    <fullName>degree_pursuing__c</fullName>
    <label>Degree Pursuing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>