force-app/main/default/objects/RC_student__c/fields/diploma_college_name__c.field-meta.xml
<CustomField>
    <fullName>diploma_college_name__c</fullName>
    <label>Diploma College Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>