force-app/main/default/objects/RC_student__c/fields/diploma_passing_year__c.field-meta.xml
<CustomField>
    <fullName>diploma_passing_year__c</fullName>
    <label>Diploma Passing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>