force-app/main/default/objects/RC_student__c/fields/hsc_name__c.field-meta.xml
<CustomField>
    <fullName>hsc_name__c</fullName>
    <label>High School (10th Grade) Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>