force-app/main/default/objects/RC_student__c/fields/hsc_pass_year__c.field-meta.xml
<CustomField>
    <fullName>hsc_pass_year__c</fullName>
    <label>High School Pass Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>