force-app/main/default/objects/RC_student__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <inlineHelpText>Please add Phone/Mobile Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>