force-app/main/default/objects/RC_student__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <label>Pincode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>