force-app/main/default/objects/RC_student__c/fields/ssc_marks__c.field-meta.xml
<CustomField>
    <fullName>ssc_marks__c</fullName>
    <label>Secondary School (CGPA/Percentage)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>