force-app/main/default/objects/RC_student__c/fields/ssc_name__c.field-meta.xml
<CustomField>
    <fullName>ssc_name__c</fullName>
    <label>Secondary School Name (12th Grade)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>