force-app/main/default/objects/RC_student__c/fields/ssc_pass_year__c.field-meta.xml
<CustomField>
    <fullName>ssc_pass_year__c</fullName>
    <label>Secondary School Pass Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>