force-app/main/default/objects/RC_student__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>