force-app/main/default/objects/RC_student__c/fields/usn__c.field-meta.xml
<CustomField>
    <fullName>usn__c</fullName>
    <label>USN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>